# alaweimm90

./: .ai-context.md  .ai-settings.yaml  .amazonq  .archives  .augment  .blackbox  .claude  .cline  .clinerules  .codex  .continue  .dev-tools  .devcontainer  .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.json  .gemini  .gitattributes  .gitignore  .governance  .husky  .kilocode  .lintstagedrc.json  .metaHub  .migration_before_structure.txt  .migration_git_status.txt  .migration_progress.md  .organizations  .pieces.config.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .secrets.baseline  .trae  .turbo  .yamllint.yml  .yolo-config.json  AGGRESSIVE_SIZE_OPTIMIZATION_PLAN.md  (+126 more)
.ai/: README.md  context.md  context.yaml  metrics.json  settings.yaml
.ai-knowledge/: CLI.md  QUICKSTART.md
.allstar/: ALLSTAR_SETUP.md  SETUP.md  allstar.yaml  branch_protection.yaml
.atlas/: agent-registry.json  circuit.json  metrics.json
.cascade/: CASCADE-MASTER-RUNNER.md  PHASE-10-ACCESSIBILITY-HANDOFF.md  PHASE-6-SECURITY-HANDOFF.md  PHASE-7-PERFORMANCE-HANDOFF.md  PHASE-8-MONITORING-HANDOFF.md  PHASE-9-BACKUP-HANDOFF.md
.claude/: settings.local.json
.cline/: settings.json
.config/: ide-wrapper.json
.cursor/: settings.json
.github/: CI_ENFORCEMENT_RULES.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection-rules.json  dependabot.yml  secret_scanning.yml
.husky/: pre-commit
.metaHub/: .PHASE2_COMPLETE  ACTIVATION_PROGRESS.md  AUTONOMOUS_WORK_SUMMARY.md  CHANGELOG.md  CLEANUP_SUCCESS.md  CLEAN_START_SUMMARY.md  DEVELOPER_GUIDE.md  FINAL_STATUS.md  GOVERNANCE_SUMMARY.md  HANDOFF_PHASE2_TO_PHASE3.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  INDEX.md  MANUAL_IMPLEMENTATION_GUIDE.md  MONITORING_CHECKLIST.md  NEXT_STEPS.md  PHASE2_COMPLETE_INDEX.md  PHASE2_SUMMARY.md  PHASE2_VISUAL_SUMMARY.txt  PHASE3_PROGRESS_SUMMARY.md  PHASE3_VISUAL_STATUS.txt  POLICY_BOT_SETUP.md  QUICK_REFERENCE.md  QUICK_START.md  README-DEVOPS-MCP.md  README.md  READY_TO_COMMIT.md  RENOVATE_LOCAL_VS_GITHUB.md  SECURITY.md  STATUS.txt  STRUCTURE_ANALYSIS.md  STRUCTURE_CLEANUP_COMPLETE.md  TROUBLESHOOTING.md  VALIDATION_CHECKLIST.md  WELCOME_BACK.txt  WELCOME_BACK_PHASE3.txt  WELCOME_BANNER.txt  WORKFLOWS_CLEANUP.md  ci.yaml  consolidation-map.json  (+9 more)
.orchex/: agent-registry.json  metrics.json
.personal/: README.md
.tools/: claude-bridge.ps1  consolidate.ps1  demo-prompt.ps1  docs-consolidate.ps1  ide-auto-approve.ps1  ide-wrapper-report.ps1  repository-auditor.js  review-auto-approve.ps1  validate-structure.ps1  yes.ps1
.trae/: config.json
CuHbnNW3/: mcp-config-extended.json  mcp-config.json  orchestration-advanced.json
alawein-technologies-llc/librex/: CHANGELOG.md  CLAUDE.md  GAP_ANALYSIS_META_VS_OPTILIBRIA.md  NOVEL_METHODS.md  README.md  coverage.xml  pyproject.toml  pytest.ini
alawein-technologies-llc/librex-qap/: CHANGELOG.md  DEVELOPMENT.md  Dockerfile  FINAL_SUMMARY.txt  GOVERNANCE.md  Makefile  ORGANIZATION_REPORT.md  PROJECT.md  QUICKSTART.md  README.md  SETUP_FOR_LOCAL_USE.md  STRUCTURE.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_enhanced.txt  test_enhanced_features.py  test_integration.py
alawein-technologies-llc/librex-qap/.github/workflows/: publish.yml  tests.yml
alawein-technologies-llc/librex-qap/.meta/: repo.yaml
alawein-technologies-llc/librex-qap/atlas/: README.md
alawein-technologies-llc/librex-qap/data/qaplib/: DOWNLOAD_REPORT.txt  LARGE_INSTANCES_DOWNLOAD_REPORT.md  MANIFEST.md  README.md  validate_format.py
alawein-technologies-llc/librex-qap/tests/: README.md  test_benchmarks.py  test_integration.py  test_methods.py  test_pipeline_exhaustive.py  test_utils_core.py  test_validation.py
alawein-technologies-llc/librex/.github/workflows/: compliance_check.yml  publish.yml  test.yml
alawein-technologies-llc/librex/Librex/: __init__.py
alawein-technologies-llc/librex/equilibria/: __init__.py
alawein-technologies-llc/librex/equilibria/acceleration/: __init__.py
alawein-technologies-llc/librex/equilibria/ai/: __init__.py  method_selector.py
alawein-technologies-llc/librex/equilibria/benchmarks/qaplib/: __init__.py  benchmark_runner.py  embedded_data.py  loader.py  registry.py
alawein-technologies-llc/librex/equilibria/methods/baselines/: __init__.py  random_search.py
alawein-technologies-llc/librex/librex_qap.egg-info/: SOURCES.txt
alawein-technologies-llc/librex/tests/benchmarks/: test_qaplib_comprehensive.py
alawein-technologies-llc/librex/tests/unit/: test_qaplib_benchmark.py
automation/: QUICKSTART.md  README.md  SYSTEM_SUMMARY.md  __init__.py  claude_http_integration.py  claude_integration.py  cli.py  cli_new.py  debt_cli.py  debt_scan.json  debt_scan.md  execute_parallel_development.py  executor.py  executor_refactored.py  parallel_executor.py  pyproject.toml  remediation_plan.md  remediation_plan_cli.md  remediation_plan_generator.py  remediation_summary.json  security_plan.md  technical_debt_remediation.py  test_scan.md  validation.py
automation-ts/: .gitignore  README.md  jest.config.js  package-lock.json  package.json
autonomous-improvement/: README.md  requirements.txt  run.py
business/: COMPLETE_BRAND_AND_INFRASTRUCTURE_AUDIT.md  DOMAINS_BRANDING_CHECKLIST.md  EXECUTION_PLAN.md  EXTERNAL_VALIDATION_PROMPT.md
compose/: AlaweinOS.yml  MeatheadPhysicist.yml  alaweimm90-business.yml  alaweimm90-science.yml  alaweimm90-tools.yml  personal.yml
config/: .editorconfig  .env.example  .eslintrc.js  .markdownlint.json  jest.config.js  pnpm-workspace.yaml  production.yml  tsconfig.json  turbo.json
docs/: AI-AUTO-APPROVE-GUIDE.md  AI-TOOL-PROFILES.md  AI-TOOLS-ORCHESTRATION.md  AI_ORCHESTRATION.md  ARCHITECTURE.md  ATLAS-API.md  ATLAS-ARCHITECTURE.md  ATLAS-QUICK-START.md  ATLAS-README.md  AUDIT_FILES_INDEX.md  BUILD_FIXES_SUMMARY.md  BUILD_TEST_REPORT.md  CODEMAP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVOPS-AGENTS.md  (+40 more)
ecosystem/sdks/rust/: Cargo.toml
sdk/python/: README.md  pyproject.toml
sdk/python/atlas/: __init__.py  client.py  exceptions.py  types.py
(+2817 files in other folders)
