# pyproject.toml - QAPLibria Tool Configuration
# ==============================================
# Publication-grade quality control configuration

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qaplibria"
dynamic = ["version"]
description = "Novel optimization methods for the Quadratic Assignment Problem"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Meshal Alawein", email = "your.email@example.com"}
]
keywords = ["optimization", "QAP", "quadratic-assignment", "combinatorial-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.0.0",
    "mypy>=1.4.0",
    "ruff>=0.1.0",
    "pre-commit>=3.3.0",
    "coverage>=7.2.0",
]
viz = [
    "plotly>=5.14.0",
    "streamlit>=1.25.0",
    "seaborn>=0.12.0",
]
all = [
    "qaplibria[dev,viz]",
]

[project.urls]
Homepage = "https://github.com/alaweimm90/QAP-CLAUDE-CODE"
Documentation = "https://github.com/alaweimm90/QAP-CLAUDE-CODE/blob/main/README.md"
Repository = "https://github.com/alaweimm90/QAP-CLAUDE-CODE"
"Bug Tracker" = "https://github.com/alaweimm90/QAP-CLAUDE-CODE/issues"

[project.scripts]
qaplibria-benchmark = "qaplibria.run_championship:main"

[tool.setuptools.dynamic]
version = {attr = "qaplibria.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["qaplibria*"]
exclude = ["tests*", "docs*", "scripts*"]

# ============================================================================
# BLACK - Code Formatter
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Standard excludes
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# ============================================================================
# RUFF - Fast Python Linter
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py39"

# Enable specific rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "YTT",    # flake8-2020
    "S",      # flake8-bandit
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PD",     # pandas-vet
    "NPY",    # numpy-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by black)
    "S101",   # use of assert (needed for tests)
    "S301",   # pickle usage (we need it for caching)
    "B008",   # function calls in argument defaults
    "C901",   # too complex (we'll manage complexity manually)
    "PLR0913", # too many arguments
]

# Exclude patterns
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "ARG", "PT"]  # Allow assert, unused args in tests
"__init__.py" = ["F401"]           # Allow unused imports in __init__

[tool.ruff.isort]
known-first-party = ["qaplibria"]
force-sort-within-sections = true

# ============================================================================
# MYPY - Static Type Checker
# ============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
disallow_untyped_defs = false  # Set to true for strict mode
disallow_incomplete_defs = false  # Set to true for strict mode
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "streamlit.*",
]
ignore_missing_imports = true

# ============================================================================
# PYTEST - Testing Framework
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Error on unknown markers
    "--strict-config",        # Error on unknown config
    "--tb=short",            # Shorter traceback format
    "--color=yes",           # Colored output
    "-v",                    # Verbose
]

# Test markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmark tests",
    "math: marks tests as mathematical verification tests",
]

# Coverage options when running with pytest-cov
[tool.coverage.run]
source = ["qaplibria"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Coverage targets
[tool.coverage.paths]
source = [
    "qaplibria/",
]

# ============================================================================
# ISORT - Import Sorting (via Ruff)
# ============================================================================
# Configuration is handled by [tool.ruff.isort] above
