[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equilibria"
version = "1.0.0"
description = "Universal Optimization Framework - Self-improving optimizer for any domain"
authors = [{name = "Meshal Alawein", email = "meshal@berkeley.edu"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["optimization", "combinatorial", "continuous", "universal", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.5.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
quantum = [
    "qiskit>=0.40.0",
    "pennylane>=0.30.0",
]
ml = [
    "torch>=2.0.0",
    "optuna>=3.0.0",
    "ray[tune]>=2.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.23.0",
]
theorem = [
    "z3-solver>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/AlaweinOS/Equilibria"
Documentation = "https://equilibria.readthedocs.io"
Repository = "https://github.com/AlaweinOS/Equilibria"
"Bug Tracker" = "https://github.com/AlaweinOS/Equilibria/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["equilibria*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=equilibria --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
